JSTests/modules/import-named-async/target.js
@@ -1,0 +1,1 @@
+export let async = 42;
